<resources>
    <string name="app_name">OverTheRoom</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_events">Events</string>
    <string name="menu_numbers">Useful Numbers</string>
    <string name="menu_documents">Documents</string>
    <string name="menu_expenses_analysis">Expenses Analysis</string>

    <string name="login_in_our_system">Login in our system</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_with_google">Login with Google</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="labEmail">Email:</string>
    <string name="labName">Name:</string>
    <string name="labSurname">Surname:</string>
    <string name="labPassword">Password:</string>
    <string name="exit">Exit</string>
    <string name="new_doc_btn">Insert new document</string>
    <string name="insert_number">Insert Number</string>
    <string name="insert_new_useful_number">Insert New Useful Number</string>
    <string name="insert_name">Insert Name</string>
    <string name="save">Save</string>
    <string name="insert_your_comment">Insert your comments</string>
    <string name="home_analytics">Home Analytics</string>
    <string name="select_time_frame">Select Time Frame</string>
    <string name="starting_date">Starting Date:</string>
    <string name="enter_date">Enter Date</string>
    <string name="ending_date">Ending Date:</string>
    <string name="generate_analytics">Generate Analytics</string>
    <string name="house_graphs">House Graphs</string>
    <string name="time_frame">Time Frame:</string>
    <string name="average_expenses">Average Expenses:</string>
    <string name="expenses_data">Per year: 4800€\nPer month: 400€\nPer day: 13,33€</string>
    <string name="rental_analytics">Rental Analytics</string>
    <string name="food_analytics">Food Analytics</string>
    <string name="bills_analytics">Bills Analytics</string>
    <string name="docname_ui">DOCNAME</string>
    <string name="label_ui">LABEL</string>
    <string name="status_ui">STATUS</string>
    <string name="name_textview">Insert document name</string>
    <string name="utility_field">Insert a label for the document</string>
    <string name="amount_field">Insert amount of the bill</string>
    <string name="image_hint">Select an image for the document:</string>
    <string name="img_storage">STORAGE</string>
    <string name="img_camera">CAMERA</string>
    <string name="uploaded_img">Uploaded img</string>
    <string name="select_a_status">Select a status</string>
    <string name="people_title">Select people to be notified</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="advanced_analytics">Advanced Analytics</string>
    <string name="recap_title">Verify inserted data and confirm</string>
    <string name="confirm">CONFIRM</string>
    <string name="change">CHANGE</string>
    <string name="percentage_change">Percentage change respect previous year:</string>
    <string name="_12_2">+ 12,2%</string>
    <string name="_6_8">- 6,8%</string>
    <string name="_3_23">- 3,23%</string>
    <string name="data_type">Data Type:</string>
    <string name="visualization_type">Visualization Type:</string>
    <string name="advanced_average_data">Per year: 1600€\nPer month: 133,33€\nPer day: 4,44€</string>
    <string name="advanced_median_data">Per year: 1430€\nPer month: 100€\nPer day: 2,5€</string>
    <string name="advanced_variance_data">Per year: 2,162\nPer month: 6,2\nPer day: 15</string>
    <string name="median_expenses">Median Expenses:</string>
    <string name="variance_expenses">Variance Expenses:</string>
    <string name="my_events">My Events</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="choose_frequency">Choose frequency</string>
    <string name="every_day">Every day</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="yearly">Yearly</string>
    <string name="no_periodic">No periodic</string>
    <string name="insert_new_event">Insert new event</string>
    <string name="description">Description</string>
    <string name="type_of_event">Type of event</string>
    <string name="enter_days_and_hours">Enter Days and Hours</string>
    <string name="enter_duration">Enter duration</string>
    <string name="choose_daily_frequency">Choose daily frequency</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="ok">OK</string>
    <string name="back">Back</string>
    <string name="set_your_profile">Set your profile</string>
    <string name="marco_rossi">Marco Rossi</string>
    <string name="marco_rossi_gmail_com">marco.rossi@gmail.com</string>
    <string name="change_profile_pic">Change profile pic</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_surname">Enter your surname</string>
    <string name="age">Age:</string>
    <string name="enter_your_age">Enter your age</string>
    <string name="profession">Profession:</string>
    <string name="enter_your_profession">Enter your profession</string>
    <string name="hobbies">Hobbies:</string>
    <string name="enter_your_hobbies">Enter your hobbies</string>
    <string name="marco">Marco</string>
    <string name="rossi">Rossi</string>
    <string name="_23">23</string>
    <string name="student">Student</string>
    <string name="i_really_like_to_play_football_in_my_free_time_i_also_enjoy_reading">I really like to play football. In my free time I also enjoy reading.</string>
    <string name="abort">Abort</string>
    <string name="enter_ending_date">Enter ending date</string>
    <string name="select_an_icon">Select an icon</string>
    <string name="starting_hour">Starting hour:</string>
    <string name="ending_hour">Ending hour:</string>
    <string name="hh_mm">hh:mm</string>
    <string name="enter_no_dates_for_the_whole_house_history">(Enter no dates for the whole house history)</string>
    <string name="choose_an_icon_number">Choose an icon number</string>

    <string-array name="data_types">
        <item>Average</item>
        <item>Median</item>
        <item>Variance</item>
    </string-array>
    <string-array name="visualization_types">
        <item>Histogram</item>
        <item>Pie Chart</item>
        <item>Line Graph</item>
    </string-array>
</resources>
