<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.hci.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.hci.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_events"
        android:name="com.example.hci.ui.events.EventsFragment"
        android:label="@string/menu_events"
        tools:layout="@layout/fragment_events" />

    <fragment
        android:id="@+id/nav_numbers"
        android:name="com.example.hci.ui.numbers.NumbersFragment"
        android:label="@string/menu_numbers"
        tools:layout="@layout/fragment_numbers" />

    <fragment
        android:id="@+id/nav_documents"
        android:name="com.example.hci.ui.documents.DocumentsFragment"
        android:label="@string/menu_documents"
        tools:layout="@layout/fragment_documents" />

    <fragment
        android:id="@+id/fragment_analytics"
        android:name="com.example.hci.ui.analytics.AnalyticsFragment"
        android:label="@string/menu_expenses_analysis"
        tools:layout="@layout/fragment_analytics" />

</navigation>