<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:contex=".MainActivity">

    <ImageView
        android:id="@+id/image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_app_logo"
        android:contentDescription="@string/app_name"/>

    <TextView
        android:id="@+id/htr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="#FFF"
        android:textSize="35sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/login_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/htr"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:textColor="#FFF"
        android:textStyle="bold"
        android:textSize="16sp"
        android:text="@string/login_in_our_system" />

    <EditText
        android:id="@+id/email"
        android:layout_below="@+id/login_info"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/border"
        android:backgroundTint="#FFF"
        android:hint="@string/email"
        android:textColorHint="#808080"
        android:inputType="textEmailAddress"
        android:gravity="center"
        android:textColor="#000"/>

    <EditText
        android:id="@+id/password"
        android:layout_below="@+id/email"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/border"
        android:backgroundTint="#FFF"
        android:hint="@string/password"
        android:textColorHint="#808080"
        android:inputType="textPassword"
        android:gravity="center"
        android:textColor="#000"/>

    <Button
        android:id="@+id/login"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:layout_marginEnd="10dp"
        android:layout_below="@+id/password"
        android:layout_marginStart="90dp"
        android:background="@drawable/round_bg"
        android:textColor="#000"
        android:text="@string/login"/>

    <Button
        android:id="@+id/sign_in"
        android:layout_below="@+id/password"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:layout_toEndOf="@+id/login"
        android:background="@drawable/round_bg"
        android:textColor="#000"
        android:text="@string/sign_in"/>

    <Button
        android:id="@+id/google_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="150dp"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp"
        android:text="@string/login_with_google"
        android:textColor="#000"
        android:gravity="center"
        android:background="@drawable/round_bg"
        android:drawableStart="@drawable/ic_google_logo" />

    <Button
        android:id="@+id/facebook_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="90dp"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp"
        android:text="@string/login_with_facebook"
        android:textColor="#000"
        android:gravity="center"
        android:background="@drawable/round_bg"
        android:drawableStart="@drawable/ic_facebook_logo" />

</RelativeLayout>