<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_profile"
    android:background="#FFF">

    <TextView
        android:id="@+id/setProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_your_profile"
        android:textColor="#000"
        android:textSize="30sp"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"/>

    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/profile_pic"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:src="@mipmap/ic_app_logo"
        android:layout_below="@id/setProfile"
        android:layout_marginTop="10dp"
        app:civ_border_width="1dp"
        app:civ_shadow="true"
        app:civ_shadow_radius="10"
        app:civ_shadow_color="#0C0C0B"/>

    <TextView
        android:id="@+id/change_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_profile_pic"
        android:textColor="@color/colorPrimary"
        android:textSize="15sp"
        android:layout_below="@+id/profile_pic"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="40dp"/>

    <TextView
        android:id="@+id/labName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labName"
        android:textColor="#000"
        android:textSize="15sp"
        android:layout_below="@+id/change_image"
        android:layout_marginTop="27dp"
        android:layout_marginStart="40dp"/>

    <EditText
        android:id="@+id/editName"
        android:layout_height="30dp"
        android:layout_width="220dp"
        android:layout_below="@+id/change_image"
        android:layout_toEndOf="@id/labName"
        android:layout_marginStart="55dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/border"
        android:hint="@string/enter_your_name"
        android:textAlignment="center"
        android:textColor="#000"
        android:textColorHint="#808080"
        android:inputType="text"/>

    <TextView
        android:id="@+id/labSurname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labSurname"
        android:textColor="#000"
        android:textSize="15sp"
        android:layout_below="@+id/labName"
        android:layout_marginTop="30dp"
        android:layout_marginStart="40dp"/>

    <EditText
        android:id="@+id/editSurname"
        android:layout_height="30dp"
        android:layout_width="220dp"
        android:layout_below="@+id/editName"
        android:layout_toEndOf="@id/labName"
        android:layout_marginStart="55dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/border"
        android:hint="@string/enter_your_surname"
        android:textAlignment="center"
        android:textColor="#000"
        android:textColorHint="#808080"
        android:inputType="text"/>

    <TextView
        android:id="@+id/labAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:textColor="#000"
        android:textSize="15sp"
        android:layout_below="@+id/labSurname"
        android:layout_marginTop="30dp"
        android:layout_marginStart="40dp"/>

    <EditText
        android:id="@+id/editAge"
        android:layout_height="30dp"
        android:layout_width="220dp"
        android:layout_below="@+id/editSurname"
        android:layout_toEndOf="@id/labName"
        android:layout_marginStart="55dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/border"
        android:hint="@string/enter_your_age"
        android:textAlignment="center"
        android:textColor="#000"
        android:textColorHint="#808080"
        android:inputType="number"/>

    <TextView
        android:id="@+id/labProfession"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profession"
        android:textColor="#000"
        android:textSize="15sp"
        android:layout_below="@+id/labAge"
        android:layout_marginTop="30dp"
        android:layout_marginStart="40dp"/>

    <EditText
        android:id="@+id/editProfession"
        android:layout_height="30dp"
        android:layout_width="220dp"
        android:layout_below="@+id/editAge"
        android:layout_toEndOf="@id/labName"
        android:layout_marginStart="55dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/border"
        android:hint="@string/enter_your_profession"
        android:textAlignment="center"
        android:textColor="#000"
        android:textColorHint="#808080"
        android:inputType="text"/>

    <TextView
        android:id="@+id/labHobbies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/passions_and_hobbies"
        android:textColor="#000"
        android:textAlignment="center"
        android:textSize="15sp"
        android:layout_below="@+id/labProfession"
        android:layout_marginTop="50dp"
        android:layout_marginStart="40dp"/>

    <EditText
        android:id="@+id/editHobbies"
        android:layout_height="90dp"
        android:layout_width="220dp"
        android:layout_below="@+id/editProfession"
        android:layout_toEndOf="@id/labName"
        android:layout_marginStart="55dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/border"
        android:hint="@string/enter_your_passions_nand_hobbies"
        android:textAlignment="center"
        android:textColor="#000"
        android:textColorHint="#808080"
        android:inputType="textMultiLine"/>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/editHobbies"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/save"
        android:background="@drawable/round_bg"
        android:backgroundTint="@color/colorPrimary"
        android:textSize="16sp" />

</RelativeLayout>