<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/border"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/textView_event_frequency"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/architects_daughter"
            android:gravity="center"
            android:text="@string/choose_frequency"
            android:textColor="#000"
            android:textSize="25sp" />

        <Button
            android:id="@+id/daily_event_button"
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/border"
            android:gravity="center"
            android:text="@string/every_day"
            android:textColor="#000"/>

        <Button
            android:id="@+id/weekly_event_button"
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/border"
            android:gravity="center"
            android:text="@string/weekly"
            android:textColor="#000"/>

        <Button
            android:id="@+id/monthly_event_button"
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/border"
            android:gravity="center"
            android:text="@string/monthly"
            android:textColor="#000"/>

        <Button
            android:id="@+id/yearly_event_button"
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/border"
            android:gravity="center"
            android:text="@string/yearly"
            android:textColor="#000"/>

        <Button
            android:id="@+id/no_periodic_event_button"
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/border"
            android:gravity="center"
            android:text="@string/no_periodic"
            android:textColor="#000"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>